--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,7 @@
     
     <style>
     body{
-      background-image: url("wallpaper3.jpg");
-        /* Full height */
-        height: 110%;
-        /* Center and scale the image nicely */
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+      background-color:#fcc7c9;
 }
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans');s
 
